--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,7 @@
+h1{
+    text-align: center;
+}
+
 .task{
     border-bottom: 1px solid blue;
 }
@@ -9,10 +13,22 @@
     padding: 0;
 }
 
-.text-enter{
+.task-list{
     display: inline;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
-.delete-button{
-    display: inline;
+.container{
+    background-color: #ffffff;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-gap: 4px 4px;
+}
+
+@media only screen and (max-width: 600px) {
+    .task-list{
+        display: block;
+        grid-column: 1/span2;
+        width: 100%;
+    }
 }
