--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
 <div class="container">
-  <div id="todo-list">
-    <p>Todo:</p>
+  <div class="task-list">
+    <h1>Todo:</h1>
     <button (click)="createNewTask()">+</button>
+    <button (click)="show = !show">{{show ? 'hide' : 'delete'}}</button>
 
     <div class="task" *ngFor="let task of tasks; trackBy: customTrackBy(); let i=index">
-      <button (click)="deleteTask(tasks.indexOf(task))" class="delete-button">X</button>
+      <button *ngIf="show" (click)="deleteTask(tasks.indexOf(task)) " class="delete-button">X</button>
       <span class="check-box">
         <input type="checkbox" checked={{task.done}} (click)="checkTask(tasks.indexOf(task))">
       </span>
@@ -16,13 +15,14 @@
 
   </div>
 
-  <div id="done-list">
-    <p>Deleted:</p>
-    <ul>
-      <li *ngFor="let task of deletedtasks">
-        <input type="checkbox"  checked={{task.done}} (click)="checkTask(task.name)">
+  <div class="task-list">
+    <h1>Deleted:</h1>
+    <div class="task" *ngFor="let task of deletedtasks">
+        <span class="check-box">
+          <input type="checkbox"  checked={{task.done}}>
+        </span>
         {{task.name}}
-      </li>
-    </ul>
+    </div>
   </div>
+  
 </div>
